<resources>
    <string name="app_name">Build Pro</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="construction_site">Construction Site</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="dont_have_an_account">Don\'t Have an Account</string>
    <string name="create_account">Create Account</string>
    <string name="first_name">First Name</string>
    <string name="terms_and_privacy">By signing up, you agree to On Site\'s Terms and Agreements and Privacy policy</string>
    <string name="sign_up">Sign Up</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="last_name">Last Name</string>
    <string name="ic_construction_site">Icon Site</string>
    <string name="btn_back">Back Button</string>
    <string name="add_avatar">Add Image</string>
    <string name="ic_back_arrow">Back Arrow</string>
    <string name="content_description_project_icon">Site Icon Description</string>
    <string name="quantity">Quantity</string>
    <string name="item_name">Item Name</string>
    <string name="dont_have_an_account_create_one">Don\'t Have An Account, Create One</string>
    <string name="photos_and_notes">Photos And Notes</string>
    <string name="equipment">Equipment</string>
    <string name="order_items">Order Items</string>
    <string name="projects">Projects</string>
    <string name="schedule">Schedule</string>
    <string name="teams">Teams</string>
    <string name="navigation_drawer_open">Navigation Drawer Open</string>
    <string name="navigation_drawer_close">Navigation Drawer Close</string>
    <string name="add_new_project">Add New Project</string>
    <string name="add_button">Add Button</string>
    <string name="site_icon_description">site_icon_image</string>
</resources>
