<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <!-- Declare any binding variables here -->
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#EEEEEE"
        android:padding="16dp"
        tools:context=".LoginActivity">


        <ImageView
            android:id="@+id/site_logo_image"
            android:layout_width="380dp"
            android:layout_height="273dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/site_icon_description"
            android:cropToPadding="true"
            android:src="@drawable/team"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.47"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.094" />

        <EditText
            android:id="@+id/username_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:autofillHints="username"
            android:hint="@string/username"
            android:maxWidth="300dp"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/site_logo_image"
            app:layout_constraintWidth_max="300dp" />

        <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:autofillHints="password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:maxWidth="300dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/username_edit_text"
            app:layout_constraintWidth_max="300dp" />

        <TextView
            android:id="@+id/forgot_password_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/forgot_password"
            android:textColor="#2196F3"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="@+id/login_button"
            app:layout_constraintStart_toStartOf="@+id/login_button"
            app:layout_constraintTop_toBottomOf="@id/password_edit_text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="#3F51B5"
            android:soundEffectsEnabled="true"
            android:text="@string/login"
            android:textColor="@android:color/white"
            app:iconSize="25dp"
            app:iconTint="#FFEB3B"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/forgot_password_text_view"
            app:layout_constraintWidth_percent="0.8"
            tools:ignore="VisualLintButtonSize" />

        <TextView
            android:id="@+id/dont_have_account_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/dont_have_an_account"
            android:textColor="#607D8B"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/create_account_text_view"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="@+id/create_account_text_view"
            app:layout_constraintTop_toBottomOf="@+id/login_button" />

        <TextView
            android:id="@+id/create_account_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:focusable="true"
            android:minHeight="48dp"
            android:text="@string/create_account"
            android:textColor="#2196F3"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dont_have_account_text_view" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>